--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,14 @@
 {
-  "name": "HelloIonic",
-  "private": "true",
-  "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.2.4"
-  }
+	"name": "HelloIonic",
+	"private": "true",
+	"dependencies": {
+		"angular": "1.4.3",
+		"angular-animate": "1.4.3",
+		"angular-sanitize": "1.4.3",
+		"angular-ui-router": "0.2.13"
+	},
+	"devDependencies": {
+		"ionic": "driftyco/ionic-bower#1.2.4",
+		"angular-mocks": "1.4.3"
+	}
 }
