gulp avec test et serve + travis

--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "gulp-util": "^2.2.14",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.21",
-    "karma-jasmine": "^0.3.7",
     "karma-phantomjs-launcher": "^1.0.0",
     "phantomjs-prebuilt": "^2.1.4",
     "shelljs": "^0.3.0"
@@ -33,6 +32,7 @@
     "android"
   ],
   "scripts": {
-    "test": "karma start karma.conf.js"
+    "test": "gulp test",
+    "serve": "gulp serve"
   }
 }
