--- a/package.json
+++ b/package.json
@@ -1,23 +1,30 @@
 {
   "name": "activin",
-  "version": "1.1.1",
+  "version": "1.0.0",
   "description": "activin: An Ionic project",
-  "dependencies": {
-    "gulp": "^3.5.6",
-    "gulp-concat": "^2.2.0",
-    "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0",
-    "gulp-sass": "^2.0.4",
-    "wiredep": "^3.0.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "bower": "^1.3.3",
+    "chai": "^3.5.0",
+    "gulp": "^3.5.6",
+    "gulp-concat": "^2.2.0",
+    "gulp-debug": "^2.1.2",
+    "gulp-env": "^0.4.0",
+    "gulp-inject": "^3.0.0",
+    "gulp-minify-css": "^0.3.0",
+    "gulp-ng-constant": "^1.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.0.4",
     "gulp-util": "^2.2.14",
-    "jasmine-core": "^2.4.1",
     "karma": "^0.13.21",
+    "karma-chai": "^0.1.0",
+    "karma-mocha": "^0.2.2",
     "karma-phantomjs-launcher": "^1.0.0",
+    "lodash": "^4.5.1",
+    "mocha": "^2.4.5",
     "phantomjs-prebuilt": "^2.1.4",
-    "shelljs": "^0.3.0"
+    "shelljs": "^0.3.0",
+    "wiredep": "^3.0.0"
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
