--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
 		"angular": "1.4.3",
 		"angular-animate": "1.4.3",
 		"angular-sanitize": "1.4.3",
+		"angular-resource": "1.4.3",
 		"angular-ui-router": "0.2.13"
 	},
 	"devDependencies": {
