--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "karma": "^0.13.21",
     "karma-chai": "^0.1.0",
     "karma-mocha": "^0.2.2",
+    "karma-ng-html2js-preprocessor": "^0.2.1",
     "karma-phantomjs-launcher": "^1.0.0",
     "lodash": "^4.5.1",
     "mocha": "^2.4.5",
