--- a/bower.json
+++ b/bower.json
@@ -2,12 +2,8 @@
 	"name": "HelloIonic",
 	"private": "true",
 	"dependencies": {
-		"angular": "1.4.3",
-		"angular-animate": "1.4.3",
-		"angular-sanitize": "1.4.3",
 		"angular-resource": "1.4.3",
-		"angular-cookies": "1.4.3",
-		"angular-ui-router": "0.2.13"
+		"angular-cookies": "1.4.3"
 	},
 	"devDependencies": {
 		"ionic": "driftyco/ionic-bower#1.2.4",
