--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-minify-css": "^0.3.0",
     "gulp-ng-constant": "^1.1.0",
     "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
     "gulp-sass": "^2.0.4",
     "gulp-util": "^2.2.14",
     "karma": "^0.13.21",
