--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,13 @@
 {
-	"name": "HelloIonic",
-	"private": "true",
-	"dependencies": {
-		"angular-resource": "1.4.3",
-		"angular-cookies": "1.4.3"
-	},
-	"devDependencies": {
-		"ionic": "driftyco/ionic-bower#1.2.4",
-		"angular-mocks": "1.4.3"
-	}
+  "name": "HelloIonic",
+  "private": "true",
+  "dependencies": {
+    "angular-resource": "1.4.3",
+    "angular-cookies": "1.4.3",
+    "ngCordova": "^0.1.24-alpha"
+  },
+  "devDependencies": {
+    "ionic": "driftyco/ionic-bower#1.2.4",
+    "angular-mocks": "1.4.3"
+  }
 }
