maj travis configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,8 @@ before_script:
   - npm install -g bower cordova ionic
   - npm install
   - bower install
+
+branches:
+  only:
+    - master
+    - develop
