--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "gulp-concat": "^2.2.0",
     "gulp-debug": "^2.1.2",
     "gulp-env": "^0.4.0",
+    "gulp-ignore": "^2.0.1",
     "gulp-inject": "^3.0.0",
+    "gulp-jshint": "^2.0.0",
     "gulp-minify-css": "^0.3.0",
     "gulp-ng-constant": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-sass": "^2.0.4",
     "gulp-util": "^2.2.14",
+    "jshint": "^2.9.1",
     "karma": "^0.13.21",
     "karma-chai": "^0.1.0",
     "karma-mocha": "^0.2.2",
