--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "bower": "^1.3.3",
     "chai": "^3.5.0",
     "gulp": "^3.5.6",
+    "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.2.0",
     "gulp-debug": "^2.1.2",
     "gulp-env": "^0.4.0",
     "gulp-ignore": "^2.0.1",
     "gulp-inject": "^3.0.0",
     "gulp-jshint": "^2.0.0",
+    "gulp-minify": "0.0.5",
     "gulp-minify-css": "^0.3.0",
     "gulp-ng-constant": "^1.1.0",
     "gulp-rename": "^1.2.2",
