--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "angular-resource": "1.4.3",
     "angular-cookies": "1.4.3",
-    "ngCordova": "^0.1.24-alpha"
+    "ngCordova": "^0.1.24-alpha",
+    "angular-google-maps": "^2.3.2"
   },
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.2.4",
