--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "angular-resource": "1.4.3",
     "angular-cookies": "1.4.3",
     "ngCordova": "^0.1.24-alpha",
-    "angular-google-maps": "^2.3.2"
+    "ng-cordova-oauth": "^0.2.3"
   },
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.2.4",
