--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-sass": "^2.0.4",
     "gulp-util": "^2.2.14",
     "jshint": "^2.9.1",
+    "jshint-stylish": "^2.1.0",
     "karma": "^0.13.21",
     "karma-chai": "^0.1.0",
     "karma-mocha": "^0.2.2",
