--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "karma-phantomjs-launcher": "^1.0.0",
     "lodash": "^4.5.1",
     "mocha": "^2.4.5",
-    "phantomjs-prebuilt": "^2.1.4",
+    "phantomjs-prebuilt": "2.1.4",
     "run-sequence": "^1.1.5",
     "shelljs": "^0.3.0",
     "wiredep": "^3.0.0"
