--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "chai": "^3.5.0",
     "gulp": "^3.5.6",
     "gulp-clean": "^0.3.2",
+    "gulp-coveralls": "^0.1.4",
     "gulp-debug": "^2.1.2",
     "gulp-env": "^0.4.0",
     "gulp-ignore": "^2.0.1",
@@ -23,6 +24,7 @@
     "jshint-stylish": "^2.1.0",
     "karma": "^0.13.21",
     "karma-chai": "^0.1.0",
+    "karma-coverage": "^0.5.5",
     "karma-mocha": "^0.2.2",
     "karma-ng-html2js-preprocessor": "^0.2.1",
     "karma-phantomjs-launcher": "^1.0.0",
