--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "activin",
-  "version": "1.0.0-alpha.3",
+  "version": "1.0.0",
   "description": "activin: An Ionic project",
   "dependencies": {},
   "devDependencies": {
